--- a/dist.ini
+++ b/dist.ini
@@ -1,16 +1,21 @@
-version = 0.003
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
 
-name    = Bencher-Scenarios-DigestSHA
+version = 0.004
+
+name    = Bencher-Scenarios-Digest-SHA
 
 [Bencher::Scenario]
 
 [@Author::PERLANCAR]
+:version=0.606
 
-:version=0.58
 [Prereqs]
 perl=5.010001
 strict=0
 warnings=0
-File::Temp=0
-Log::ger=0.011
-
+File::Temp=0.2307
+Log::ger=0.038
